syntax = "proto3";

package telegramAuth;

service TelegramAuthorizer {
  rpc GetTelegramCode (TelegramAuthRequest) returns (TelegramAuthReply);
}

message TelegramAuthRequest {
  string userId = 1;
}

message TelegramAuthReply {
  string userId = 1;
  int32 code = 2;
}